--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:r71mXFKfYrJFgEQkZkWp3NnulLZqxJxvsqypnYd4dgo=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=cron_job_send_email
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -29,11 +29,13 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_HOST=sandbox.smtp.mailtrap.io
+MAIL_PORT=2525
+# username & password & tls get from https://mailtrap.io/inboxes/2452355/messages
+MAIL_USERNAME=9cda06ff34d397 
+MAIL_PASSWORD=********4c8e
+MAIL_ENCRYPTION=tls
+# 
 MAIL_FROM_ADDRESS=null
 MAIL_FROM_NAME="${APP_NAME}"
 
