--- a/package.json
+++ b/package.json
@@ -13,6 +13,12 @@
         "axios": "^0.21",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "postcss": "^8.1.14",
+        "vue-loader": "^15.9.8",
+        "vue-template-compiler": "^2.7.14"
+    },
+    "dependencies": {
+        "sweetalert2": "^7.30.0",
+        "vue-ctk-date-time-picker": "^2.0.6"
     }
 }
